--- a/table1.tex
+++ b/table1.tex
@@ -1,2 +1,55 @@
-\begin{tabular}{| r | r | c | c | c |}
+\begin{tabular}{llllllll}
+Observation & \multicolumn{1}{|l}{Imaging} & \multicolumn{6}{|c}{Model}\\
+\cline{3-8}
+ & \multicolumn{1}{|l}{ } & \multicolumn{1}{|l}{Base} & 
+ -STDP & \begin{tabular}-Syn.\\Comp.\end{tabular} & -Intrinsic & Visual & Noise \\
+\hline
+Brain FL selectivity	& 30\%	& 100\%	& 150\%	& 50\%	& -50\%		& 80\%	& 50\% \\
+Brain FL selectivity change	& =	& $\land$	$\lor$	& 	$\land$ $\lor$	& $\land$ & = & $\land$ & =\\
+Av. FL selectivity, $d$ & 0.6 & 0.8 & 1.0 & 0.6 & -7.0 & 0.8 & 0.5 \\
+Av. FL selectivity change & = & $\land$ & $\land$ $\lor$ & $\land$ & $\lor$ $\land$ & $\land$ & = \\
+\% FL selective cells & 98\% & 95\% & 75\% & 0\% & 95\% & 95\%\\
+\% FL selective cells, change & $= & \land & \land & \land \lor & = & \land & \land$\\
+FL 90-50 percentile change & $\lor$ & $\land$ & $\land$ $\lor$ & $\land$ & $\land$ $\lor$ & $\land$ & =\\
+\hline
+Brain SL selectivity & $\times & \checkmark & \checkmark & \checkmark & \times & ? & ?$ \\
+Av. SL selectivity, $d$ & -0.05 & 0.5 & 0.7 & 0.5 & -0.5 & 0.2 & 0\\
+Av. SL selectivity change & = & $\land$ & $\land$ $\lor$ & $\land$ & $\lor$ & $\land$ & = \\
+\% SL selective cells & 50\% & 80\% & 90\% & 70\% & 20\% & 70\% & 50\% \\
+\% SL selective cells, change & = & ? & ? & ? & ? & ? & ? \\
+SL 90-50 percentile change & = & $\land$ & $\land$ $\lor$ & $\land$ & - & $\land$ $\lor$ & -\\
+corr(FS,FL) & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$ & $\checkmark$ \\
+corr(SL,FL) & $\times$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$\\
+Stim. type reconstruction & - & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ $\lor$ \\
+\hline
+PCA complexity & $= & \land & \land & \land \lor & \land & \land & \land$\\
+N Ensembles, change & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ \\
+Ensembles spatially local & $\checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark$\\
+Ensembles overconnected & $\checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark$\\
+\% reciprocal edges,change & $\lor$ & TODO & TODO & TODO & TODO & TODO & TODO\\
+\hline
+\multicolumn{8}{l}{Connections between cells:}\\
+Spatially close & $\checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times$ \\
+Become closer & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ \\
+Face in or out: & = & = & = & out & = & = & =\\
+Increase selectivity & $\times$ & $\times & \times & \checkmark & \times & \times & \times$ \\
+\hline
+\multicolumn{8}{l}{Network properties:}\\
+Degree $k=0$, change & $\lor$ & $\lor$ & $\lor$ & $\land$ & $\lor$ & $\lor$ & $\lor$ \\
+Degree $k=1-2$, change & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ & $\land$ \\
+Degree $k\geqslant 5$, change & $\lor$ & $\lor$ & $\lor$ & $\land$ & $\lor$ & $\lor$ & $\lor$ \\
+Degree power constant $\gamma$ & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ & $\land$ \\
+Efficiency change & = & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ & $\land$ \\
+Clustering change & = & $\lor$ & $\lor$ & $\lor$ & $\lor$ & $\lor$ & $\lor$ \\
+Modularity change & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ \\
+Hierarchy change & = & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ & -\\
+\hline
+\multicolumn{8}{l}{Properites of selective cells:}\\
+Central or peripheral & $\checkmark$ & $\times$ & $\times$ & $\times$ & = & $\times$ & no\\
+Spatial grouping, change & $\lor$ & $\lor$ & $\lor$ & $\lor$ & $\land$ & $\lor$ & $\lor$ \\
+High $k_{in}$ & $\checkmark$ & $\times$ & $\times$ & $\checkmark$ & $\times$ & $\times$ & $\times$\\
+High Katz rank & $\checkmark$ & $\times$ & $\times$ & $\checkmark$ & $\times$ & $\times$ & $\times$\\
+Are more spiky & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$\\
+Assortative& $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$\\
+Unusual Clustering & = & low & = & high & low & = & =\\
 \end{tabular}
