Results: table: some numbers fixed

--- a/main.tex
+++ b/main.tex
@@ -211,7 +211,7 @@ To better assess whether the predictions of the model were confirmed in experime
 
 \begin{table}
     \input{table1.tex}
-    \caption{A summary of network phenomena observed in biological experiments, in comparison with the base model, and several reduced models. For clarity, we use $\checkmark$ for "yes", $\times$ for "no", $\land$ for "up", $\lor$ for "down", and $=$ for "no effect".}
+    \caption{A summary of network phenomena observed in biological experiments, in comparison with the base model, and several reduced models. For clarity, we use $\checkmark$ for "yes", $\times$ for "no", $\land$ for "increase", $\lor$ for "decrease", $\land \lor$ for "increase followed by decrease", and $=$ for "no change".}
 \end{table}
 
 \subsection*{Sensitivity analysis}
