Results: table: newgeometry for this page only, reducing left margin

--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,8 @@
 %\usepackage[switch,pagewise]{lineno} % Numbered lines for two columns
 \usepackage[pagewise]{lineno} % Numbered lines for one column
 
-% \usepackage{hyperref} % good for urls, but it also URLizes references
+%\usepackage{adjustbox} % To change margins around a table. Doesn't work?
+\usepackage{tabularx} % To set table column width, if needed
 \usepackage{xcolor}
 \renewcommand{\linenumberfont}{\normalfont\bfseries\small\color{lightgray}}
 \definecolor{linkcolor}{rgb}{0.2,0.6,0.7} % Neuron-style link color
@@ -199,7 +200,7 @@ Unlike in biological experiments, the model was selective for looming stimuli ov
 
 The positioning of selective cells within the network was different in model, compared to biological experiments. While in tadpoles, selective cells tended to be located in the middle of the retinotopic field, in the model they tended to be located on the periphery, and selectivity for looming stimuli positively correlated with the distance from the network center. Similar to tadpoles, however, this correlation disappeared in development (from $r\sim$ 0.75 in a naive network, to $r\sim$0.25 in a trained network). Despite the fact that the edges of looming stimuli generally traveled from the center of the retinotopic field to the periphery, there was no correlation between the weight of a cell-to-cell connection and its being facing outward from the network center ($r$=8e-5), which means that connections were equally likely to face outward and inward. Similarly to biological networks, selective cells tended to be closer to each other (29$\pm$3\% closer) than expected by chance, yet unlike what we observed in biological networks, this locality of connections was refined in developments.
 
-We then looked at topological and functional correlates of looming selectivity in model networks. Selective cells tended to be more spiky ($r$=0.34$\pm$0.12), with very mild increase in development. They tended not to be a part of a cluster (final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the model selective sells were not special in terms of their Katz centrality ($r$=0.02$\pm$0.13), and they did not tend to receive an unusual number of incoming connections ($r$=0.00$\pm$0.12). Selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07), and on average selectivity did not increase over edges ($r$=0.00$\pm$0.14). In naive networks $\sim$85\% of strong edges (top 50\% of edge weights) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$±$0.03).
+We then looked at topological and functional correlates of looming selectivity in model networks. Selective cells tended to be more spiky ($r$=0.34$\pm$0.12), with very mild increase in development. They tended not to be a part of a cluster (final correlation with local clustering coefficient $r$=$-$0.26$\pm$0.12). Unlike in biological networks, in the model selective sells were not special in terms of their Katz centrality ($r$=0.02$\pm$0.13), and they did not tend to receive an unusual number of incoming connections ($r=$0.00$\pm$0.12). Selective cells tended to be connected to each other (weighted assortativity of 0.24$\pm$0.07), and on average selectivity did not increase over edges ($r$=0.00$\pm$0.14). In naive networks $\sim$85\% of strong edges (top 50\% of edge weights) tended to lead from less selective sells to more selective ones, but in developed networks this share was reduced to chance value (51$\pm$0.03).
 
 The variability of responses to looming stimuli over time, quantified as the number of principal components required to describe 80\% of response variability, mildly increased in development, from 28$\pm$1 to 37$\pm$1. The number of ensembles detected in the network did not change in development, and stayed around 8 to 8.5$\pm$0.5, but the share of variance in network responses explained by the involvement of different ensembles, increased from $\sim$35\% for a naive network, to $\sim$50\% by the end of learning. As in biological results, cells that formed an ensemble were about 10\% closer to each other than random cells in the network, and, in developed networks, were 2.2$\pm$0.5 times more likely to be connected to each other.
 
@@ -209,10 +210,12 @@ Finally, we observed that most network measures changed with network development
 
 To better assess whether the predictions of the model were confirmed in experiments, we formulated a list of “atomic”, elementary statements about each of the measures were analyzed, looking at whether they changed in development, whether they increased or decreased, and whether they differed from similar measures in a randomized network (Table 1). For each of these statements, we then compared the model to the experimental data, and labeled each comparison as either a match (Y), a clear contradiction (N), or an unclear case (no label). We used “no label” for all cases when the model predicted a change, but the comparison between tadpoles of different ages had p-value above 0.05, to reflect that developmental trajectories in the model and in real tadpoles were not well matched, and also that the sample size in our biological experiments was relatively small (see Discussion). Overall, the model and the experiments were compatible in terms of flash-looming selectivity, but did not match in terms of scrambled-looming selectivity. The interplay between cell position and connectivity was similar in the model and in biological experiments, except for the spatial distribution of looming-selective cells within the retinotopic map, which was peripheral in the model, but central in tadpoles. Changes in degree distribution were very similar, but except for modularity, other network measures did not match. When correlations between different measures of node centrality and cell collectivity were considered, some of them matched, but many did not.
 
+\newgeometry{left=1in} % This page will have smaller margins
 \begin{table}
     \input{table1.tex}
     \caption{A summary of network phenomena observed in biological experiments, in comparison with the base model, and several reduced models. For clarity, we use $\checkmark$ for "yes", $\times$ for "no", $\land$ for "increase", $\lor$ for "decrease", $\land \lor$ for "increase followed by decrease", and $=$ for "no change".}
 \end{table}
+\restoregeometry
 
 \subsection*{Sensitivity analysis}
 
