--- a/table1.tex
+++ b/table1.tex
@@ -5,7 +5,7 @@
 Observation & \multicolumn{1}{|l}{Imaging} & \multicolumn{6}{|c}{Model}\\
 \cline{3-8}
  & \multicolumn{1}{|l}{ } & \multicolumn{1}{|l}{Base} & 
- -STDP & \begin{tabular}-Syn.\\Comp.\end{tabular} & -Intrinsic & Visual & Noise \\
+ -STDP & \begin{tabular}{l}-Syn.\\Comp.\end{tabular} & -Intrinsic & Visual & Noise \\
 \hline
 Brain FL selectivity & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$ & $\checkmark$ & $\checkmark$ \\
 Brain FL selectivity, change & =	& $\land$	$\lor$	& 	$\land$ $\lor$	& $\land$ & = & $\land$ & =\\
