--- a/main.tex
+++ b/main.tex
@@ -412,7 +412,7 @@ $$\bar{a}=\sum_i{w_i a_i}/\sum_i{w_i}$$
 
 Note that this formula differs slightly from the one used in the Brain Connectivity Toolbox \citep{rubinov2010toolbox}.
 
-\textbf{Unreported analyses}. For the sake of transparency, we report the list of measures that were calculated, but were hard to interpret, and so were not included in the final manuscript: four measures of weighted directed degree assortativity (in-in, in-out, out-in, and out-out); pagerank centralities; Katz centralities and hierarchical flows on reversed graph $W'$; alternative measure of cell selectivity based on McFadden’s pseudo-$R$ for a logistic fit of stimulus identity to the total response of each cell. We also made several attempts to estimate the prevalence of directed cycles in our networks, but decided that these new measures require further validation.
+\textbf{Unreported analyses}. For the sake of transparency, we report the list of measures that were calculated, but were hard to interpret, and so were not included in the final manuscript: four measures of weighted directed degree assortativity (in-in, in-out, out-in, and out-out); pagerank centrality; Katz centrality on reversed graph $W'$; hierarchical flow for reversed graph; node reach on direct and reversed graphs (unweighted analog of Katz centrality without attenuation); as an alternative measure of cell selectivity, McFadden’s pseudo-$R$ for a logistic fit of stimulus identity to the total response of each cell. We also made several attempts to estimate the prevalence of directed cycles in our networks, but these new measures require further validation.
 
 \subsection*{Developmental Model}
 
