--- a/table1.tex
+++ b/table1.tex
@@ -1,59 +1,62 @@
 % Help for tables:
 % https://en.wikibooks.org/wiki/LaTeX/Tables
 
-\begin{tabular}{llllllll}
-Observation & \multicolumn{1}{|l}{Imaging} & \multicolumn{6}{|c}{Model}\\
+\newcolumntype{L}{>{$}l<{$}} % math-mode version of "l" column type
+\begin{tabular}{lLLLLLLL}
+\textbf{Observation} & 
+\multicolumn{1}{|l}{\textbf{Imaging}} & 
+\multicolumn{6}{|c}{\textbf{Model}}\\
 \cline{3-8}
  & \multicolumn{1}{|l}{ } & \multicolumn{1}{|l}{Base} & 
- -STDP & \begin{tabular}{l}-Syn.\\Comp.\end{tabular} & -Intrinsic & Visual & Noise \\
+ \text{-STDP} & \begin{tabular}{l}-Syn.\\Comp.\end{tabular} & \text{-Intrinsic} & \text{Visual} & \text{Noise} \\
 \hline
-Brain FL selectivity & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$ & $\checkmark$ & $\checkmark$ \\
-Brain FL selectivity, change & =	& $\land$	$\lor$	& 	$\land$ $\lor$	& $\land$ & = & $\land$ & =\\
+Brain FL selectivity & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark \\
+Brain FL selectivity, change & =	& \land	\lor	& 	\land \lor	& \land & = & \land & =\\
 Av. FL selectivity $d$ & 0.6 & 0.8 & 1.0 & 0.6 & -7.0 & 0.8 & 0.5 \\
-Av. FL selectivity, change & = & $\land$ & $\land$ $\lor$ & $\land$ & $\lor$ $\land$ & $\land$ & = \\
+Av. FL selectivity, change & = & \land & \land \lor & \land & \lor \land & \land & = \\
 \% FL selective cells & 80\% & 98\% & 95\% & 75\% & 0\% & 95\% & 95\%\\
-\% FL selective cells, change & $= & \land & \land & \land \lor & = & \land & \land$\\
-FL 90-50 percentile, change & $\lor$ & $\land$ & $\land$ $\lor$ & $\land$ & $\land$ $\lor$ & $\land$ & =\\
+\% FL selective cells, change & = & \land & \land & \land \lor & = & \land & \land\\
+FL 90-50 percentile, change & \lor & \land & \land \lor & \land & \land \lor & \land & =\\
 \hline
-Brain SL selectivity & $\times & \checkmark & \checkmark & \checkmark & \times & \checkmark & \times $ \\
+Brain SL selectivity & \times & \checkmark & \checkmark & \checkmark & \times & \checkmark & \times  \\
 Av. SL selectivity $d$ & -0.05 & 0.5 & 0.7 & 0.5 & -0.5 & 0.2 & 0\\
-Av. SL selectivity, change & = & $\land$ & $\land$ $\lor$ & $\land$ & $\lor$ & $\land$ & = \\
+Av. SL selectivity, change & = & \land & \land \lor & \land & \lor & \land & = \\
 \% SL selective cells & 50\% & 80\% & 90\% & 70\% & 20\% & 70\% & 50\% \\
-\% SL selective cells, change & = & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\lor$ \\
-SL 90-50 percentile change & = & $\land$ & $\land$ $\lor$ & $\land$ & - & $\land$ $\lor$ & -\\
-corr(FS,FL) & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$ & $\checkmark$ \\
-corr(SL,FL) & $\times$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$\\
-Stim. decoding, change & = & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ $\lor$ \\
+\% SL selective cells, change & = & \land & \land & \land & \lor & \land & \lor \\
+SL 90-50 percentile change & = & \land & \land \lor & \land & - & \land \lor & -\\
+corr(FS,FL) & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark \\
+corr(SL,FL) & \times & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
+Stim. decoding, change & = & \land & \land & \land & \lor & \land & \land \lor \\
 \hline
-PCA complexity & $= & \land & \land & \land \lor & \land & \land & \land$\\
-N Ensembles, change & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ \\
-Ensembles spatially local & $\checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark$\\
-Ensembles overconnected & $\checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark$\\
-\% reciprocal edges,change & $\lor$ & TODO & TODO & TODO & TODO & TODO & TODO\\
+PCA complexity & = & \land & \land & \land \lor & \land & \land & \land\\
+N Ensembles, change & \times & \times & \times & \times & \times & \times & \times \\
+Ensembles spatially local & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
+Ensembles overconnected & \checkmark & \checkmark & \checkmark & \times & \checkmark & \checkmark & \checkmark\\
+\% reciprocal edges, change & \lor & TODO & TODO & TODO & TODO & TODO & TODO\\
 \hline
-\multicolumn{8}{l}{Connections between cells:}\\
-Spatially close & $\checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times$ \\
-Become closer & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$ \\
-Face in or out: & = & = & = & out & = & = & =\\
-Increase selectivity & $\times$ & $\times & \times & \checkmark & \times & \times & \times$ \\
+\multicolumn{8}{l}{\textbf{Connections between cells:}}\\
+Spatially close & \checkmark & \checkmark & \times & \times & \checkmark & \checkmark & \times \\
+Become closer & \times & \times & \times & \times & \times & \times & \times \\
+Point in or out: & = & = & = & \text{out} & = & = & =\\
+Increase selectivity & \times & \times & \times & \checkmark & \times & \times & \times \\
 \hline
-\multicolumn{8}{l}{Network properties:}\\
-Degree $k=0$, change & $\lor$ & $\lor$ & $\lor$ & $\land$ & $\lor$ & $\lor$ & $\lor$ \\
-Degree $k=1-2$, change & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ & $\land$ \\
-Degree $k\geqslant 5$, change & $\lor$ & $\lor$ & $\lor$ & $\land$ & $\lor$ & $\lor$ & $\lor$ \\
-Degree power constant $\gamma$ & $\land$ & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ & $\land$ \\
-Efficiency change & = & $\land$ & $\land$ & $\lor$ & $\land$ & $\land$ & $\land$ \\
-Clustering change & = & $\lor$ & $\lor$ & $\lor$ & $\lor$ & $\lor$ & $\lor$ \\
-Modularity change & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ \\
-Hierarchy change & = & $\land$ & $\land$ & $\land$ & $\land$ & $\land$ & -\\
+\multicolumn{8}{l}{\textbf{Network properties:}}\\
+Degree $k=0$, change & \lor & \lor & \lor & \land & \lor & \lor & \lor \\
+Degree $k=1-2$, change & \land & \land & \land & \lor & \land & \land & \land \\
+Degree $k\geqslant 5$, change & \lor & \lor & \lor & \land & \lor & \lor & \lor \\
+Degree power constant $\gamma$ & \land & \land & \land & \lor & \land & \land & \land \\
+Efficiency change & = & \land & \land & \lor & \land & \land & \land \\
+Clustering change & = & \lor & \lor & \lor & \lor & \lor & \lor \\
+Modularity change & \land & \land & \land & \land & \land & \land & \land \\
+Hierarchy change & = & \land & \land & \land & \land & \land & -\\
 \hline
-\multicolumn{8}{l}{Properites of selective cells:}\\
-Grouped in the center & $\checkmark$ & $\times$ & $\times$ & $\times$ & $=$ & $\times$ & $\times$\\
-Grouped at the edges & $\times$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $=$ & $\checkmark$ & $\checkmark$\\
-Spatial grouping, change & $\lor$ & $\lor$ & $\lor$ & $\lor$ & $\land$ & $\lor$ & $\lor$ \\
-High $k_{in}$ & $\checkmark$ & $\times$ & $\times$ & $\checkmark$ & $\times$ & $\times$ & $\times$\\
-High Katz rank & $\checkmark$ & $\times$ & $\times$ & $\checkmark$ & $\times$ & $\times$ & $\times$\\
-Are more spiky & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$\\
-Assortative& $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$\\
-Unusual clustering coeff.& = & low & = & high & low & = & =\\
+\multicolumn{8}{l}{\textbf{Properites of selective cells:}}\\
+Grouped in the center & \checkmark & \times & \times & \times & = & \times & \times\\
+Grouped at the edges & \times & \checkmark & \checkmark & \checkmark & = & \checkmark & \checkmark\\
+Spatial grouping, change & \lor & \lor & \lor & \lor & \land & \lor & \lor \\
+High in-degree $k_{in}$ & \checkmark & \times & \times & \checkmark & \times & \times & \times\\
+High Katz rank & \checkmark & \times & \times & \checkmark & \times & \times & \times\\
+Are more spiky & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \times\\
+Assortative& \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
+Unusual clustering coeff.& = & \text{low} & = & \text{high} & \text{low} & = & =\\
 \end{tabular}
