Results (very beginning): within-brain t-tests of whether cells were on average selective for looming - removed. It's hard to interpret; artificial comparison.

--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,7 @@ In different animals, looming detection seems to rely on a variety of networks a
 
 While this co-existence of multiple alternative solutions for looming detection may seem overwhelming, it actually matches the recent insight from the field of machine learning. Simple, crude ways of detecting important features of sensory stimuli are critical for training more sophisticated and efficient networks, that are then used for more nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. In case of looming stimuli in tadpoles, early in development, when collision detection is weak \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina to detect collisions, but also to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, these motion-dependent networks can serve as a first line of defense, identifying early phases of looming, and providing information to motor neurons in the hindbrain to perform course correction \citep{khakhalin2014,bhattacharyya2017assessment}, yet dimming detectors could remain as a backup, and mediate a more urgent and less coordinated response. Moreover, every time collision avoidance is not performed perfectly, these sensorimotor networks can be further refined, relying on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016}.
 
-Traditionally, the golden standard for a mechanistic explanation was to demonstrate that activation of a certain structure is sufficient and required for a behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same statistics as a normal brain would not necessarily tell us how to “fix” this brain, even if we could rewire individual neurons in a targeted fashion.
+Traditionally, the golden standard for describing the mechanism of a behavior was to demonstrate that activation of a certain structure is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same statistics as a normal brain would not necessarily tell us how to “fix” this brain, even if we could rewire individual neurons in a targeted fashion.
 
 A more promising approach is to study the origin of functional structures in the brain. Most neural networks are not truly hardwired, but dynamically “evolve” from a set of developmental rules \citep{pietri2017emergence}, similar to how it happens for Turing patterns or fractals \citep{lefevre2010reaction,bullmore2012economy}, and may also rely on streams of structured sensory information coming from the external world \citep{gao2015simplicity}. This insight is encouraging, as the agents that follow these developmental rules are individual cells and their compartments, such as active dendrites and synapses, which implies that while the ultimate product of these rules may be exceedingly complex, the rules themselves have to be relatively simple \citep{bassett2018models}. It may be therefore, that our best chance to truly “understand” the brain lies in studying the sets of rules that lead to the development of functional networks \citep{linderman2017constrain}. This approach proved to be extremely fruitful recently, as several complex network phenomena, including visual receptive fields [ref], grid cells [ref], and decision circtuis [refs]\citep{haesemeyer2018convergent}, were shown to evolve spontaneously in systems governed by intuitive developmental rules and clear behavioral goals. 
 
@@ -108,17 +108,15 @@ Here we use high-speed Ca imaging data to infer connectivity of small sub-networ
 
 \section*{Results}
 
-For all mathematical methods, in the main text we provide their names, and the interpretation of the results, while definitions are given in the “Methods” section. For statistical analyses, we report p-values without correction, and interpret them according to Fisher, and not Neyman-Pearson philosophy \citep{greenland2016}. This approach is preferable for this study, as many of our analyses are not independent, but still ask different questions, and rely on different null model hypotheses. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses.
+For all mathematical methods, we provide their names and their interpretation in the main text, but leave definitions and details for the “Methods” section. For statistical analyses, we report p-values without correction, and interpret them according to Fisher, and not Neyman-Pearson philosophy \citep{greenland2016}. This approach is preferable for this study, as many of our analyses are not independent, but still ask different questions, and rely on different null model hypotheses. At the interpretation step, we pay more attention to hypotheses supported by several alternative analyses.
 
-We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229). Here and below, “$\pm$” after the mean denotes standard deviation, and unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles respectively apply to all analyses between younger and older animals. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a looming stimulus, followed by a full-field flash, followed by a spatially “scrambled” looming stimulus. Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. High speed calcium imaging recordings were performed from one layer of “deep” principal tectal neurons in the tectum \citep{xu2011,truszkowski2017}; from these videos we then extracted fluorescence traces, and inferred average spiking of each neuron within every frame.
+We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles respectively apply to all analyses between younger and older animals reported in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a looming stimulus, followed by a full-field flash, followed by a spatially “scrambled” looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. High speed calcium imaging signals \citep{xu2011,truszkowski2017} were recorded from one layer of “deep” principal tectal neurons in the tectum (Fig 1B); from these videos we then extracted fluorescence traces (Fig 1C), and inferred average spiking of each neuron within every frame (Fig 1D).
 
 \subsection*{Responses and stimulus selectivity}
 
-Similar to previously published electrophysiology experiments \citep{khakhalin2014}, responses to flashes were fast, with a sharp peak and mild recurrent activation after the peak, while responses to looming stimuli were slower, and followed by strong recurrent activation (Fig). Responses to both looming and scrambled stimuli were highly variable from one animal to another; for scrambled stimuli this was likely because the rearrangement of frame tiles different from one experiment to another, making stimuli presented in different experiments also slightly different. For looming stimuli however this may indicate either an inherent variability of network configuration from animal to animal, or different levels of recurrent inhibition present in different preparations. We did not quantify differences in response shapes, and proceeded with the analysis of response amplitudes.
+Similar to previously published electrophysiology experiments \citep{khakhalin2014}, responses to flashes were fast, with a sharp peak and mild recurrent activation after the peak, while responses to looming stimuli were slower, and followed by strong recurrent activation (Fig 1E). Responses to both looming and scrambled stimuli were highly variable from one animal to another; for scrambled stimuli this can be easily explained, as frame tiles were rearranged differently in different experiments, increasing response variability. For looming stimuli however, this may indicate either an inherent variability of network configuration from animal to animal, or different levels of recurrent inhibition across preparations. We did not quantify differences in response shapes, and proceeded with the analysis of response amplitudes.
 
-The total output of observed tectal networks tended to be higher in response to looming stimuli than to flashes (39$\pm$29\% higher for younger, and 25$\pm$25\% higher for older tadpoles). There was no change in overall preference for looming stimuli in development ($p_t$=0.15). The total tectum output was variable from one experiment to another, and while the majority of preparations showed selectivity for looming stimuli ($p_t<$0.05 in 11/14 and 9/16 experiments for stage 46 and 49 tadpoles respectively), the remaining 10 preparations had preference for looming stimuli. Interestingly, the majority of experiments with no preference for looming stimuli happened in older, and so presumably more developed animals.
-
-The difference between full brain responses to looming and scrambled stimuli was even more diverse: some preparations did not have a preference between these stimuli ($p>$ 0.05; 9/14 and 7/16 for younger and older tadpoles respectively), some preferred looming stimuli to scrambled (1/14 and 4/16), while some preferred scrambled stimuli to looming (4/14 and 5/16). This individualized preference was most likely an artifact of our experimental approach, as “scrambled” stimuli were uniquely rearranged for each experiment, but were kept constant within each experimental session. It seems that this design produced less salient stimuli in some experiments, but more salient stimuli in others. At the same time, these results support our earlier reports that in tadpoles, the total tectal response depends on the dynamics of visual stimuli stronger than on stimulus geometry \citep{khakhalin2014,jang2016}.
+The total output of observed tectal networks tended to be higher in response to looming stimuli than to flashes (on average, 39$\pm$29\% higher for younger; 25$\pm$25\% higher for older tadpoles; $p_{t1}=$ 2e-4 and 1e-3 respectively; Fig. 1F). There was no change in this preference in development ($p_t$=0.15). Responses to looming and scrambled stimuli did not differ (average differences of $-$0.03$\pm$0.15 and $-$0.01$\pm$0.20; $p_{t1}=$ 0.45 and 0.78 for younger and older animals respectively), and there was no different in development ($p_t=$0.80). This supports our prior observations that in tadpoles, the total tectal response depends mostly on the dynamics of visual stimuli, rather than on their geometry \citep{khakhalin2014,jang2016}.
 
 To quantify selectivity of each individual tectal cell, we used Cohen’s $d$ effect size of cell  responses to different stimuli (the difference in mean responses, divided by the pooled standard deviation of response amplitudes). We calculated two different measures of selectivity: that for "looming stimuli over flashes" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" stimuli (that can only rely on spatial organization, as these stimuli shared dynamics). On average, tectal cells were selective for looming stimuli, with no difference between younger and older tadpoles (0.67$\pm$0.50 and 0.46$\pm$0.47 respectively, $p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivities: while the variance of selectivity did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones. The skew decreased because the difference between the top-selective (90th percentile) and median selective cells within each brain became lower in older animals: 0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles ($p_t=$ 0.03). These results are unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, so we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
