--- a/table1.tex
+++ b/table1.tex
@@ -14,16 +14,16 @@ Brain FL selectivity & \checkmark & \checkmark & \checkmark & \checkmark & \time
 Brain FL selectivity, change & =	& \land	\lor	& 	\land \lor	& \land & = & \land & =\\
 Av. FL selectivity $d$ & 0.6 & 0.8 & 1.0 & 0.6 & -7.0 & 0.8 & 0.5 \\
 Av. FL selectivity, change & = & \land & \land \lor & \land & \lor \land & \land & = \\
-\% FL selective cells & 80\% & 98\% & 95\% & 75\% & 0\% & 95\% & 95\%\\
-\% FL selective cells, change & = & \land & \land & \land \lor & = & \land & \land\\
-FL 90-50 percentile, change & \lor & \land & \land \lor & \land & \land \lor & \land & =\\
+\% FL select. cells & 80\% & 98\% & 95\% & 75\% & 0\% & 95\% & 95\%\\
+\% FL select. cells, change & = & \land & \land & \land \lor & = & \land & \land\\
+FL 90-50 \%tile, change & \lor & \land & \land \lor & \land & \land \lor & \land & =\\
 \hline
 Brain SL selectivity & \times & \checkmark & \checkmark & \checkmark & \times & \checkmark & \times  \\
 Av. SL selectivity $d$ & -0.05 & 0.5 & 0.7 & 0.5 & -0.5 & 0.2 & 0\\
 Av. SL selectivity, change & = & \land & \land \lor & \land & \lor & \land & = \\
-\% SL selective cells & 50\% & 80\% & 90\% & 70\% & 20\% & 70\% & 50\% \\
-\% SL selective cells, change & = & \land & \land & \land & \lor & \land & \lor \\
-SL 90-50 percentile change & = & \land & \land \lor & \land & - & \land \lor & -\\
+\% SL select. cells & 50\% & 80\% & 90\% & 70\% & 20\% & 70\% & 50\% \\
+\% SL select. cells, change & = & \land & \land & \land & \lor & \land & \lor \\
+SL 90-50 \%tile change & = & \land & \land \lor & \land & - & \land \lor & -\\
 corr(FS,FL) & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \times & \checkmark \\
 corr(SL,FL) & \times & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark & \checkmark\\
 Stim. decoding, change & = & \land & \land & \land & \lor & \land & \land \lor \\
